# xdp-nat-forward

./: .gitignore  Cargo.toml  README.md  api.http
forward/: Cargo.toml  build.rs
forward-common/: Cargo.toml
forward-common/src/: lib.rs
forward-ebpf/: Cargo.toml
forward-ebpf/src/: main.rs
forward-manager/: Cargo.toml
forward-manager/frontend/: index.html  package-lock.json  package.json  vite.config.ts
forward-manager/frontend/src/: App.tsx  index.css
forward-manager/src/: handlers.rs  main.rs  types.rs
forward/src/: cmd.rs  http.rs  main.rs  manager_client.rs  rule.rs  utils.rs
