[package]
name = "forward-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
forward-common = { path = "../forward-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "forward"
path = "src/main.rs"
