[package]
name = "forward-manager"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }
